// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MaestroTranslators Tap Command Snapshots > tapOn with all properties 1`] = `
"- tapOn:
    id: "testId"
    retryTapIfNoChange: false
    repeat: 3
    waitToSettleTimeoutMs: 200
"
`;

exports[`MaestroTranslators Tap Command Snapshots > tapOn with all properties 2`] = `
"- tapOn:
    id: "testId"
    retryTapIfNoChange: false
"
`;

exports[`MaestroTranslators Tap Command Snapshots > tapOn with formatted tap props 1`] = `
"- tapOn:
    id: "testId"
    retryTapIfNoChange: false
    repeat: 3
    waitToSettleTimeoutMs: 500
"
`;

exports[`MaestroTranslators Tap Command Snapshots > tapOn with id only 1`] = `
"- tapOn:
    id: "testId"
"
`;

exports[`MaestroTranslators Tap Command Snapshots > tapOnPoint with coordinates and properties 1`] = `
"- tapOn:
    point: 50%,50%
    repeat: 4
    waitToSettleTimeoutMs: 500
"
`;

exports[`MaestroTranslators Tap Command Snapshots > tapOnText with text and properties 1`] = `
"- tapOn:
    text: "sample text"
    repeat: 2
"
`;

exports[`MaestroTranslators Tap Command Snapshots > waitForAndTapOn with all properties 1`] = `
"- extendedWaitUntil:
    visible:
        id: "testId"
    timeout: 5000
- tapOn:
    id: "testId"
"
`;

exports[`MaestroTranslators Tap Command Snapshots > waitForAndTapOn with id and maxWait 1`] = `
"- extendedWaitUntil:
    visible:
        id: "testId"
    timeout: 5000
- tapOn:
    id: "testId"
"
`;
